--- a/requirements-prod.txt
+++ b/requirements-prod.txt
@@ -2,6 +2,7 @@
 google-cloud-bigquery==3.40.0
 google-api-python-client==2.190.0
 google-auth==2.48.0
+pyarrow>=10.0.0
 
 # Data processing
 pandas==2.3.3
